<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <group android:id="@+id/mainGroup">
    <item
        android:id="@+id/to_register"
        android:title="@string/register"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/to_login"
        android:title="@string/login"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/to_users"
        android:title="@string/users"
        app:showAsAction="never"
        />
    </group>

    <group android:id="@+id/otherGroup">
        <item
            android:id="@+id/to_main"
            android:title="@string/to_main"
            app:showAsAction="never"
            />
    </group>
</menu>